k8s/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-app
  namespace: pj
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sentiment-app
  template:
    metadata:
      labels:
        app: sentiment-app
    spec:
      containers:
        - name: app
          image: sentiment-app:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
